# ohm

./: .gitignore  Cargo.toml  README.md  ohm.koto  patch.koto  patch.ohm  prelude.koto  scales.koto  script.koto
examples/: fm.koto  hihat.koto  kick.koto  organ.koto  sine.koto
ohm/: bjorklund.koto  main.koto  ohm_test.koto  pitches.koto
sketches/: presentation.koto
src/: audio_graph.rs  compiler.rs  consts.rs  container.rs  env.rs  graph.rs  main.rs  nodes.rs  op.rs  parser.rs  tokenizer.rs  utils.rs
src/dsp/: delay.rs  filters.rs  mod.rs  reverb.rs
