[package]
name = "ohm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
cpal = "0.15.3"
fundsp = "0.20.0"
koto = { git = "https://github.com/koto-lang/koto.git", branch = "main" }
notify = "8.0.0"
petgraph = "0.6.5"
rand = { version = "0.8.5", features = ["small_rng"] }
rtsan-standalone = "0.1.0"
seahash = "4.1"

[features]
rtsan = ["rtsan-standalone/enable"]
